src/test/ui/parser/pat-lt-bracket-4.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `<`
  --> $DIR/pat-lt-bracket-4.rs:10:12
   |
LL |         Foo<T>::A(value) => value, //~ error: expected one of `=>`, `@`, `if`, or `|`, found `<`
   |            ^ expected one of `=>`, `@`, `if`, or `|` here

error: aborting due to previous error

